--- a/app/semantic.yaml
+++ b/app/semantic.yaml
@@ -1,33 +1,2 @@
-metrics:
-  revenue:
-    label: "Przychody"
-    sql: "SUM(CASE WHEN f.type='revenue' THEN f.amount ELSE 0 END)"
-  cogs:
-    label: "COGS"
-    sql: "SUM(CASE WHEN f.type='cogs' THEN f.amount ELSE 0 END)"
-  gross_margin:
-    label: "Marża brutto"
-    sql: "(SUM(CASE WHEN f.type='revenue' THEN f.amount ELSE 0 END) - SUM(CASE WHEN f.type='cogs' THEN f.amount ELSE 0 END))"
-  gross_margin_pct:
-    label: "Marża brutto %"
-    sql: "CASE WHEN SUM(CASE WHEN f.type='revenue' THEN f.amount ELSE 0 END)=0
-          THEN 0
-          ELSE ((SUM(CASE WHEN f.type='revenue' THEN f.amount ELSE 0 END) - SUM(CASE WHEN f.type='cogs' THEN f.amount ELSE 0 END))
-                *100.0 / SUM(CASE WHEN f.type='revenue' THEN f.amount ELSE 0 END)) END"
-  opex:
-    label: "OPEX"
-    sql: "SUM(CASE WHEN f.type='opex' THEN f.amount ELSE 0 END)"
-  quantity:
-    label: "Ilość"
-    sql: "SUM(f.quantity)"
-
-dimensions:
-  date:
-    table: dim_date
-    columns: ["year","quarter","month","date"]
-  product:
-    table: dim_product
-    columns: ["product_id","product_name","category"]
-  customer:
-    table: dim_customer
-    columns: ["customer_id","customer_name","region"]
+metrics: {}
+dimensions: {}
